[gd_scene load_steps=14 format=2]

[ext_resource path="res://sprites/Player/giuratore_walk.png" type="Texture" id=1]
[ext_resource path="res://scripts/Player.gd" type="Script" id=2]
[ext_resource path="res://scenes/Bullet.tscn" type="PackedScene" id=3]
[ext_resource path="res://sprites/Bullets/gunsheet.png" type="Texture" id=4]
[ext_resource path="res://scripts/GunPoint.gd" type="Script" id=5]
[ext_resource path="res://sfx/projectilehit.wav" type="AudioStream" id=6]
[ext_resource path="res://sprites/Bullets/playerPointer.png" type="Texture" id=7]
[ext_resource path="res://sfx/hitHurt.wav" type="AudioStream" id=8]
[ext_resource path="res://scripts/SaveTimer.gd" type="Script" id=9]
[ext_resource path="res://sprites/light.png" type="Texture" id=10]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 2, 3 )

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=3]
resource_name = "Walk"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5 ]
}

[node name="Player" type="KinematicBody2D" groups=["Player", "friendlyProjectilesPassThrough"]]
script = ExtResource( 2 )
acceleration = 0
max_speed = 1
fireDelay = 0.08
Bullet = ExtResource( 3 )

[node name="Light2D" type="Light2D" parent="."]
visible = false
texture = ExtResource( 10 )
texture_scale = 0.6
energy = 0.5
shadow_enabled = true

[node name="Sprite" type="Sprite" parent="."]
z_index = 1
texture = ExtResource( 1 )
hframes = 6

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 3 )
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 2 )
anims/Walk = SubResource( 3 )

[node name="Gun" type="Node2D" parent="."]
position = Vector2( 0, 3 )
scale = Vector2( 0.5, 0.5 )
z_index = 2
script = ExtResource( 5 )

[node name="Sprite" type="Sprite" parent="Gun"]
z_index = 2
texture = ExtResource( 4 )
hframes = 6

[node name="Position2D" type="Position2D" parent="Gun"]
position = Vector2( 14, 0 )

[node name="ShotGuns" type="Node2D" parent="Gun"]

[node name="Position2D" type="Position2D" parent="Gun/ShotGuns"]
position = Vector2( 14, 0 )
rotation = 0.0872665

[node name="Position2D7" type="Position2D" parent="Gun/ShotGuns"]
position = Vector2( 14, 0 )

[node name="Position2D2" type="Position2D" parent="Gun/ShotGuns"]
position = Vector2( 14, 0 )
rotation = 0.174533

[node name="Position2D3" type="Position2D" parent="Gun/ShotGuns"]
position = Vector2( 14, 0 )
rotation = 0.261799

[node name="Position2D6" type="Position2D" parent="Gun/ShotGuns"]
position = Vector2( 14, 0 )
rotation = -0.0872665

[node name="Position2D4" type="Position2D" parent="Gun/ShotGuns"]
position = Vector2( 14, 0 )
rotation = -0.174533

[node name="Position2D5" type="Position2D" parent="Gun/ShotGuns"]
position = Vector2( 14, 0 )
rotation = -0.261799

[node name="FireDelayTimer" type="Timer" parent="."]
wait_time = 0.001
one_shot = true

[node name="RollDelayTimer" type="Timer" parent="."]
one_shot = true

[node name="IFrameTimer" type="Timer" parent="."]
one_shot = true

[node name="IFrameFlashTimer" type="Timer" parent="."]
one_shot = true

[node name="ShootSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = -15.0

[node name="HitSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )

[node name="Pointer" type="Sprite" parent="."]
position = Vector2( 0, -5 )
scale = Vector2( 0.642857, 0.642857 )
texture = ExtResource( 7 )

[node name="SaveTimer" type="Timer" parent="."]
one_shot = true
script = ExtResource( 9 )

[node name="GunRecoil" type="Tween" parent="."]

[node name="GunRecoil2" type="Tween" parent="."]

[connection signal="tween_completed" from="GunRecoil" to="." method="_on_GunRecoil_tween_completed"]
